--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    font-family: Arial, Helvetica, sans-serif;
     background: rgb(53,53,170);
     min-height: 90vh;
     display: grid;
@@ -24,6 +25,7 @@ body{
 }
 
 .botones{
+    text-align: center;
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -62,4 +64,57 @@ button #igual{
 #igual:hover{
     background-color: #566573;
     transition: 0.3s;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 40%;
+    height: 100%;
+    overflow: auto;
+}
+
+.modal-content {
+    border-radius: 7px;
+    background-color: #f1f1f1;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+ul li{
+    list-style: none;
+}
+
+.button-historial button{
+    width: 285%;
 }
